--- a/web/index.html
+++ b/web/index.html
@@ -6,17 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decadent Dozen - Dynasty League 2024 Recap</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        body {
+            background-color: #1a1a1a;
+            color: #e5e5e5;
+        }
+    </style>
 </head>
 
-<body class="bg-white text-gray-900 px-4 py-6 max-w-screen-md mx-auto">
+<body class="px-4 py-6 max-w-screen-md mx-auto">
     <header class="text-center mb-6">
         <h1 class="text-3xl font-bold">Dynasty League 2024 Recap</h1>
-        <p class="text-gray-600">A look back at the season's stats and insights</p>
+        <p class="text-gray-400">A look back at the season's stats and insights</p>
     </header>
 
-    <nav class="mb-6 sticky top-0 bg-white z-10 py-2 border-b border-gray-200">
+    <nav class="mb-6 sticky top-0 z-10 py-2 border-b border-gray-700">
         <h2 class="font-semibold mb-2">Jump to Team</h2>
-        <ul class="flex flex-wrap gap-3 text-blue-600 text-sm">
+        <ul class="flex flex-wrap gap-3 text-blue-400 text-sm">
             <li><a href="#connor">Connor</a></li>
             <li><a href="#ryan-w">Ryan W</a></li>
             <li><a href="#abe">Abe</a></li>
@@ -62,7 +68,7 @@
                     <p>We'll see if he can repeat his ridiculous performance next year.</p>
                 </div>
 
-                <button class="text-blue-600 text-sm" onclick="toggleMore(this)">Show more</button>
+                <button class="text-blue-400 text-sm" onclick="toggleMore(this)">Show more</button>
             </div>
         </div>
 
@@ -231,7 +237,7 @@
         }
     </script>
 
-    <footer class="text-center text-sm text-gray-500 mt-12">
+    <footer class="text-center text-sm text-gray-400 mt-12">
         <p>&copy; 2024 Dynasty Recap by Sleeper Season Analysis</p>
     </footer>
 </body>
