Adding emojis to headers

--- a/web/index.html
+++ b/web/index.html
@@ -111,7 +111,7 @@
         <h2 class="text-2xl font-bold mt-12 mb-4">🎉 The Honorable Mentions</h2>
 
         <div id="sera">
-            <h3 class="text-xl font-semibold">Sera - Dynasty Gourmand</h3>
+            <h3 class="text-xl font-semibold">🎯 Sera - Dynasty Gourmand</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>@PrincessofRaven finished the regular season with the 2nd strongest record at 9-5, and taking the 4th
                     place finish in the playoffs.</p>
@@ -131,7 +131,7 @@
         </div>
 
         <div id="josh">
-            <h3 class="text-xl font-semibold">Josh - Joshi</h3>
+            <h3 class="text-xl font-semibold">💪 Josh - Joshi</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>@yoahiwa had a dominant regular season, scoring the 2nd most points in the league and handing Connor
                     his only loss all year.</p>
@@ -146,7 +146,7 @@
         </div>
 
         <div id="bryce">
-            <h3 class="text-xl font-semibold">Bryce - Mormen less problems</h3>
+            <h3 class="text-xl font-semibold">⚡ Bryce - Mormen less problems</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>@jazzyjackalope led an unlucky squad that scored 5th most in the league to a solid 8-6 record against
                     the most points scored by opponents.</p>
@@ -160,10 +160,10 @@
             </div>
         </div>
 
-        <h2 class="text-2xl font-bold mt-12 mb-4">⚖️ Those who missed the playoffs</h2>
+        <h2 class="text-2xl font-bold mt-12 mb-4">⚖️ Those Who Were Mid</h2>
 
         <div id="gabe">
-            <h3 class="text-xl font-semibold">Gabe - Godo(n)t stop me</h3>
+            <h3 class="text-xl font-semibold">🤷 Gabe - Godo(n)t stop me</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>After a blazing 6-2 start, @EmpiricalFool must have made a coaching change or something (sorry Gabe),
                     suffering heartbreaking defeat after heartbreaking defeat as the team collapsed to a 7-7 final
@@ -182,7 +182,7 @@
         </div>
 
         <div id="chelsea">
-            <h3 class="text-xl font-semibold">Chelsea - Supermassive Black Hole</h3>
+            <h3 class="text-xl font-semibold">🕳️ Chelsea - Supermassive Black Hole</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>The other team that finished 7-7, @xXTeamJacobXx similarly had a hot 5-2 start, putting up wins
                     against some of the easier teams in the league.</p>
@@ -201,7 +201,7 @@
         </div>
 
         <div id="conor">
-            <h3 class="text-xl font-semibold">Conor - The Wright Stuff</h3>
+            <h3 class="text-xl font-semibold">😤 Conor - The Wright Stuff</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>It was a difficult season for @TwiceMarked, as what was a solid team all around that started 5-3,
                     slid to a sad 6-8 record.</p>
@@ -217,10 +217,10 @@
             </div>
         </div>
 
-        <h2 class="text-2xl font-bold mt-12 mb-4">🪦 Here lies the remainder</h2>
+        <h2 class="text-2xl font-bold mt-12 mb-4">🪦 </h2>
 
         <div id="ryan-g">
-            <h3 class="text-xl font-semibold">Ryan G - Team ProfesorCaos</h3>
+            <h3 class="text-xl font-semibold">🤕 Ryan G - Team ProfesorCaos</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>At 5-9, I wasn't sure if I should consider myself a team who missed the playoffs or this category,
                     but then I recalled how my season went.</p>
@@ -242,7 +242,7 @@
         </div>
 
         <div id="gwen">
-            <h3 class="text-xl font-semibold">Gwen - ZZ Bottom</h3>
+            <h3 class="text-xl font-semibold">🐣 Gwen - ZZ Bottom</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>A team that started out as a rebuilding squad, @dontwearsandals drafted a lot of young players, many
                     of whom hit big in their rookie season.</p>
@@ -260,7 +260,7 @@
         </div>
 
         <div id="ira">
-            <h3 class="text-xl font-semibold">Ira - Carradine Curtain Cords</h3>
+            <h3 class="text-xl font-semibold">💩 Ira - Carradine Curtain Cords</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>It was a rough season for @RustySporxxx, as his first round pick, Christian McCaffrey, missed the
                     first half of the season, and didn't even play 4 games all year.</p>
