--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,9 @@
             background-color: #1a1a1a;
             color: #e5e5e5;
         }
+        html {
+            scroll-behavior: smooth;
+        }
     </style>
 </head>
 
@@ -40,7 +43,7 @@
 
     <section class="space-y-6">
         <h2 class="text-2xl font-bold mt-12 mb-4">🏅 The Winner's Circle</h2>
-        <div id="connor">
+        <div id="connor" class="scroll-mt-20">
             <h3 class="text-xl font-semibold">🏆 - Connor - Team CeeLoGreen97</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>A big congratulations to our champion @CeeLoGreen97! </p>
@@ -73,7 +76,7 @@
             </div>
         </div>
 
-        <div id="ryan-w">
+        <div id="ryan-w" class="scroll-mt-20">
             <h3 class="text-xl font-semibold">🥈 - Ryan W - Dan Flashes your Nabers</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>A round of applause for our runner up! @rynoceros17 had a strong finish after a rocky 2-4 start to
@@ -93,7 +96,7 @@
             </div>
         </div>
 
-        <div id="abe">
+        <div id="abe" class="scroll-mt-20">
             <h3 class="text-xl font-semibold">🥉 - Abe - Team SgtWeenieArms</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>And @SgtWeenieArms gets the bronze! Abe had a solid squad that scored the 3rd most points.</p>
@@ -110,7 +113,7 @@
 
         <h2 class="text-2xl font-bold mt-12 mb-4">🎉 The Honorable Mentions</h2>
 
-        <div id="sera">
+        <div id="sera" class="scroll-mt-20">
             <h3 class="text-xl font-semibold">🎯 Sera - Dynasty Gourmand</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>@PrincessofRaven finished the regular season with the 2nd strongest record at 9-5, and taking the 4th
@@ -130,7 +133,7 @@
             </div>
         </div>
 
-        <div id="josh">
+        <div id="josh" class="scroll-mt-20">
             <h3 class="text-xl font-semibold">💪 Josh - Joshi</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>@yoahiwa had a dominant regular season, scoring the 2nd most points in the league and handing Connor
@@ -145,7 +148,7 @@
             </div>
         </div>
 
-        <div id="bryce">
+        <div id="bryce" class="scroll-mt-20">
             <h3 class="text-xl font-semibold">⚡ Bryce - Mormen less problems</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>@jazzyjackalope led an unlucky squad that scored 5th most in the league to a solid 8-6 record against
@@ -162,7 +165,7 @@
 
         <h2 class="text-2xl font-bold mt-12 mb-4">⚖️ Those Who Were Mid</h2>
 
-        <div id="gabe">
+        <div id="gabe" class="scroll-mt-20">
             <h3 class="text-xl font-semibold">🤷 Gabe - Godo(n)t stop me</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>After a blazing 6-2 start, @EmpiricalFool must have made a coaching change or something (sorry Gabe),
@@ -181,7 +184,7 @@
             </div>
         </div>
 
-        <div id="chelsea">
+        <div id="chelsea" class="scroll-mt-20">
             <h3 class="text-xl font-semibold">🕳️ Chelsea - Supermassive Black Hole</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>The other team that finished 7-7, @xXTeamJacobXx similarly had a hot 5-2 start, putting up wins
@@ -200,7 +203,7 @@
             </div>
         </div>
 
-        <div id="conor">
+        <div id="conor" class="scroll-mt-20">
             <h3 class="text-xl font-semibold">😤 Conor - The Wright Stuff</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>It was a difficult season for @TwiceMarked, as what was a solid team all around that started 5-3,
@@ -219,7 +222,7 @@
 
         <h2 class="text-2xl font-bold mt-12 mb-4">🪦 </h2>
 
-        <div id="ryan-g">
+        <div id="ryan-g" class="scroll-mt-20">
             <h3 class="text-xl font-semibold">🤕 Ryan G - Team ProfesorCaos</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>At 5-9, I wasn't sure if I should consider myself a team who missed the playoffs or this category,
@@ -241,7 +244,7 @@
             </div>
         </div>
 
-        <div id="gwen">
+        <div id="gwen" class="scroll-mt-20">
             <h3 class="text-xl font-semibold">🐣 Gwen - ZZ Bottom</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>A team that started out as a rebuilding squad, @dontwearsandals drafted a lot of young players, many
@@ -259,7 +262,7 @@
             </div>
         </div>
 
-        <div id="ira">
+        <div id="ira" class="scroll-mt-20">
             <h3 class="text-xl font-semibold">💩 Ira - Carradine Curtain Cords</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>It was a rough season for @RustySporxxx, as his first round pick, Christian McCaffrey, missed the
