Perfecting the scrolling with nav bar

--- a/web/index.html
+++ b/web/index.html
@@ -43,8 +43,8 @@
 
     <section class="space-y-6">
         <h2 class="text-2xl font-bold mt-12 mb-4">🏅 The Winner's Circle</h2>
-        <div id="connor" class="scroll-mt-20">
-            <h3 class="text-xl font-semibold">🏆 - Connor - Team CeeLoGreen97</h3>
+        <div>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="connor">🏆 - Connor - Team CeeLoGreen97</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>A big congratulations to our champion @CeeLoGreen97! </p>
                 <div class="hidden more-content space-y-2">
@@ -76,8 +76,8 @@
             </div>
         </div>
 
-        <div id="ryan-w" class="scroll-mt-20">
-            <h3 class="text-xl font-semibold">🥈 - Ryan W - Dan Flashes your Nabers</h3>
+        <div>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="ryan-w">🥈 - Ryan W - Dan Flashes your Nabers</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>A round of applause for our runner up! @rynoceros17 had a strong finish after a rocky 2-4 start to
                     the season.</p>
@@ -96,8 +96,8 @@
             </div>
         </div>
 
-        <div id="abe" class="scroll-mt-20">
-            <h3 class="text-xl font-semibold">🥉 - Abe - Team SgtWeenieArms</h3>
+        <div>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="abe">🥉 - Abe - Team SgtWeenieArms</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>And @SgtWeenieArms gets the bronze! Abe had a solid squad that scored the 3rd most points.</p>
                 <div class="hidden more-content space-y-2">
@@ -113,8 +113,8 @@
 
         <h2 class="text-2xl font-bold mt-12 mb-4">🎉 The Honorable Mentions</h2>
 
-        <div id="sera" class="scroll-mt-20">
-            <h3 class="text-xl font-semibold">🎯 Sera - Dynasty Gourmand</h3>
+        <div>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="sera">🎯 Sera - Dynasty Gourmand</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>@PrincessofRaven finished the regular season with the 2nd strongest record at 9-5, and taking the 4th
                     place finish in the playoffs.</p>
@@ -133,8 +133,8 @@
             </div>
         </div>
 
-        <div id="josh" class="scroll-mt-20">
-            <h3 class="text-xl font-semibold">💪 Josh - Joshi</h3>
+        <div>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="josh">💪 Josh - Joshi</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>@yoahiwa had a dominant regular season, scoring the 2nd most points in the league and handing Connor
                     his only loss all year.</p>
@@ -148,8 +148,8 @@
             </div>
         </div>
 
-        <div id="bryce" class="scroll-mt-20">
-            <h3 class="text-xl font-semibold">⚡ Bryce - Mormen less problems</h3>
+        <div>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="bryce">⚡ Bryce - Mormen less problems</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>@jazzyjackalope led an unlucky squad that scored 5th most in the league to a solid 8-6 record against
                     the most points scored by opponents.</p>
@@ -165,8 +165,8 @@
 
         <h2 class="text-2xl font-bold mt-12 mb-4">⚖️ Those Who Were Mid</h2>
 
-        <div id="gabe" class="scroll-mt-20">
-            <h3 class="text-xl font-semibold">🤷 Gabe - Godo(n)t stop me</h3>
+        <div>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="gabe">🤷 Gabe - Godo(n)t stop me</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>After a blazing 6-2 start, @EmpiricalFool must have made a coaching change or something (sorry Gabe),
                     suffering heartbreaking defeat after heartbreaking defeat as the team collapsed to a 7-7 final
@@ -184,8 +184,8 @@
             </div>
         </div>
 
-        <div id="chelsea" class="scroll-mt-20">
-            <h3 class="text-xl font-semibold">🕳️ Chelsea - Supermassive Black Hole</h3>
+        <div>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="chelsea">🕳️ Chelsea - Supermassive Black Hole</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>The other team that finished 7-7, @xXTeamJacobXx similarly had a hot 5-2 start, putting up wins
                     against some of the easier teams in the league.</p>
@@ -203,8 +203,8 @@
             </div>
         </div>
 
-        <div id="conor" class="scroll-mt-20">
-            <h3 class="text-xl font-semibold">😤 Conor - The Wright Stuff</h3>
+        <div>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="conor">😤 Conor - The Wright Stuff</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>It was a difficult season for @TwiceMarked, as what was a solid team all around that started 5-3,
                     slid to a sad 6-8 record.</p>
@@ -222,8 +222,8 @@
 
         <h2 class="text-2xl font-bold mt-12 mb-4">🪦 </h2>
 
-        <div id="ryan-g" class="scroll-mt-20">
-            <h3 class="text-xl font-semibold">🤕 Ryan G - Team ProfesorCaos</h3>
+        <div>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="ryan-g">🤕 Ryan G - Team ProfesorCaos</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>At 5-9, I wasn't sure if I should consider myself a team who missed the playoffs or this category,
                     but then I recalled how my season went.</p>
@@ -244,8 +244,8 @@
             </div>
         </div>
 
-        <div id="gwen" class="scroll-mt-20">
-            <h3 class="text-xl font-semibold">🐣 Gwen - ZZ Bottom</h3>
+        <div>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="gwen">🐣 Gwen - ZZ Bottom</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>A team that started out as a rebuilding squad, @dontwearsandals drafted a lot of young players, many
                     of whom hit big in their rookie season.</p>
@@ -262,8 +262,8 @@
             </div>
         </div>
 
-        <div id="ira" class="scroll-mt-20">
-            <h3 class="text-xl font-semibold">💩 Ira - Carradine Curtain Cords</h3>
+        <div>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="ira">💩 Ira - Carradine Curtain Cords</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>It was a rough season for @RustySporxxx, as his first round pick, Christian McCaffrey, missed the
                     first half of the season, and didn't even play 4 games all year.</p>
