--- a/web/index.html
+++ b/web/index.html
@@ -41,10 +41,13 @@
         </ul>
     </nav>
 
+    <!-- MATCHUP_TABLES_START -->
+    <!-- MATCHUP_TABLES_END -->
+
     <section class="space-y-6">
         <h2 class="text-2xl font-bold mt-12 mb-4">🏅 The Winner's Circle</h2>
         <div>
-            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="connor">🏆 - Connor - Team CeeLoGreen97</h3>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="connor">🏆 - Connor - Team CeeLoGreen97 - (13-1)</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>A big congratulations to our champion @CeeLoGreen97! </p>
                 <div class="hidden more-content space-y-2">
@@ -77,7 +80,7 @@
         </div>
 
         <div>
-            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="ryan-w">🥈 - Ryan W - Dan Flashes your Nabers</h3>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="ryan-w">🥈 - Ryan W - Dan Flashes your Nabers - (8-6)</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>A round of applause for our runner up! @rynoceros17 had a strong finish after a rocky 2-4 start to
                     the season.</p>
@@ -97,15 +100,17 @@
         </div>
 
         <div>
-            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="abe">🥉 - Abe - Team SgtWeenieArms</h3>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="abe">🥉 - Abe - Team SgtWeenieArms - (8-6)</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>And @SgtWeenieArms gets the bronze! Abe had a solid squad that scored the 3rd most points.</p>
                 <div class="hidden more-content space-y-2">
                     <p>While his strength of schedule was fairly middling, scoring the 7th most points, against Abe,
-                        those teams outperformed by 2%, resulting in the 5th most points scored against him.</p>
+                        those teams overperformed by 2%, resulting in the 5th most points scored against him.</p>
+                    <p>The most impressive part about Abe's season was the turnaround. After starter 1-4 and then 2-6,
+                        Abe won 6 straight games to finish the season with one of the best records in the league.</p>
                     <p>Josh Allen and Justin Herbert proved their QB talent, while Taylor Swift's boyfriend continuing
                         to put up decent points and a mid-season trade for Drake London helped secure a playoff spot
-                        after an unfortunate 1-4 start.</p>
+                        after that unfortunate start.</p>
                 </div>
                 <button class="text-blue-400 text-sm" onclick="toggleMore(this)">Show more</button>
             </div>
@@ -114,7 +119,7 @@
         <h2 class="text-2xl font-bold mt-12 mb-4">🎉 The Honorable Mentions</h2>
 
         <div>
-            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="sera">🎯 Sera - Dynasty Gourmand</h3>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="sera">🎯 Sera - Dynasty Gourmand - (9-5)</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>@PrincessofRaven finished the regular season with the 2nd strongest record at 9-5, and taking the 4th
                     place finish in the playoffs.</p>
@@ -134,7 +139,7 @@
         </div>
 
         <div>
-            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="josh">💪 Josh - Joshi</h3>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="josh">💪 Josh - Joshi - (8-6)</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>@yoahiwa had a dominant regular season, scoring the 2nd most points in the league and handing Connor
                     his only loss all year.</p>
@@ -149,13 +154,15 @@
         </div>
 
         <div>
-            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="bryce">⚡ Bryce - Mormen less problems</h3>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="bryce">⚡ Bryce - Mormen less problems - (8-6)</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>@jazzyjackalope led an unlucky squad that scored 5th most in the league to a solid 8-6 record against
                     the most points scored by opponents.</p>
                 <div class="hidden more-content space-y-2">
                     <p>While the strength of schedule was very average, Bryce's opponents outperformed their expected
                         scores by over 9%.</p>
+                    <p>After starting out with a strong 4-0 record, the squad had a tougher time, 
+                        without a winning or losing streak longer than 2, to end up finishing 4-6</p>
                     <p>Bo Nix performed well as a rookie, while Bijan Robinson, James Cook, and Jonathon Taylor were a
                         terrific RB trio. Maybe next season you should play better defense 😛</p>
                 </div>
@@ -166,7 +173,7 @@
         <h2 class="text-2xl font-bold mt-12 mb-4">⚖️ Those Who Were Mid</h2>
 
         <div>
-            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="gabe">🤷 Gabe - Godo(n)t stop me</h3>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="gabe">🤷 Gabe - Godo(n)t stop me - (7-7)</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>After a blazing 6-2 start, @EmpiricalFool must have made a coaching change or something (sorry Gabe),
                     suffering heartbreaking defeat after heartbreaking defeat as the team collapsed to a 7-7 final
@@ -185,7 +192,7 @@
         </div>
 
         <div>
-            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="chelsea">🕳️ Chelsea - Supermassive Black Hole</h3>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="chelsea">🕳️ Chelsea - Supermassive Black Hole - (7-7)</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>The other team that finished 7-7, @xXTeamJacobXx similarly had a hot 5-2 start, putting up wins
                     against some of the easier teams in the league.</p>
@@ -204,7 +211,7 @@
         </div>
 
         <div>
-            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="conor">😤 Conor - The Wright Stuff</h3>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="conor">😤 Conor - The Wright Stuff - (6-8)</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>It was a difficult season for @TwiceMarked, as what was a solid team all around that started 5-3,
                     slid to a sad 6-8 record.</p>
@@ -223,7 +230,7 @@
         <h2 class="text-2xl font-bold mt-12 mb-4">🪦 </h2>
 
         <div>
-            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="ryan-g">🤕 Ryan G - Team ProfesorCaos</h3>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="ryan-g">🤕 Ryan G - Team ProfesorCaos - (5-9)</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>At 5-9, I wasn't sure if I should consider myself a team who missed the playoffs or this category,
                     but then I recalled how my season went.</p>
@@ -245,7 +252,7 @@
         </div>
 
         <div>
-            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="gwen">🐣 Gwen - ZZ Bottom</h3>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="gwen">🐣 Gwen - ZZ Bottom - (4-10)</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>A team that started out as a rebuilding squad, @dontwearsandals drafted a lot of young players, many
                     of whom hit big in their rookie season.</p>
@@ -263,7 +270,7 @@
         </div>
 
         <div>
-            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="ira">💩 Ira - Carradine Curtain Cords</h3>
+            <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="ira">💩 Ira - Carradine Curtain Cords - (1-13)</h3>
             <div class="space-y-2 ml-6 mr-6 mt-2">
                 <p>It was a rough season for @RustySporxxx, as his first round pick, Christian McCaffrey, missed the
                     first half of the season, and didn't even play 4 games all year.</p>
