Generating the weekly points scored table

--- a/web/index.html
+++ b/web/index.html
@@ -44,7 +44,7 @@
 
     <!-- MATCHUP_TABLES_START -->
     <section class="mt-16 overflow-x-auto">
-        <h2 class="text-xl font-bold mb-4">📊 Weekly Win/Loss Results</h2>
+        <h2 class="text-xl font-bold mt-16 mb-4">📊 Weekly Win/Loss Results</h2>
         <table class="table-auto border-collapse w-full text-sm">
             <thead>
                 <tr>
@@ -269,6 +269,234 @@
                     <td class="border px-2 py-1 text-green-400 bg-rose-800/30">W</td>
                     <td class="border px-2 py-1 text-green-400 bg-amber-800/30">W</td>
                     <td class="border px-2 py-1 text-red-400 bg-blue-900/30">L</td>
+                </tr>
+            </tbody>
+        </table>
+        <h2 class="text-xl font-bold mt-16 mb-4">📈 Weekly Points Scored</h2>
+        <table class="table-auto border-collapse w-full text-sm">
+            <thead>
+                <tr>
+                    <th class="border px-2 py-1 text-left">Team</th>
+                    <th class="border px-2 py-1">1</th>
+                    <th class="border px-2 py-1">2</th>
+                    <th class="border px-2 py-1">3</th>
+                    <th class="border px-2 py-1">4</th>
+                    <th class="border px-2 py-1">5</th>
+                    <th class="border px-2 py-1">6</th>
+                    <th class="border px-2 py-1">7</th>
+                    <th class="border px-2 py-1">8</th>
+                    <th class="border px-2 py-1">9</th>
+                    <th class="border px-2 py-1">10</th>
+                    <th class="border px-2 py-1">11</th>
+                    <th class="border px-2 py-1">12</th>
+                    <th class="border px-2 py-1">13</th>
+                    <th class="border px-2 py-1">14</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="border px-2 py-1">ProfesorCaos</td>
+                    <td class="border px-2 py-1 text-red-400 bg-blue-900/30">100.64</td>
+                    <td class="border px-2 py-1 text-red-400 bg-blue-900/30">103.46</td>
+                    <td class="border px-2 py-1 text-red-400 bg-blue-900/30">165.38</td>
+                    <td class="border px-2 py-1 text-red-400 bg-blue-900/30">122.08</td>
+                    <td class="border px-2 py-1 text-green-400 bg-blue-900/30">178.6</td>
+                    <td class="border px-2 py-1 text-green-400 bg-blue-900/30">145.32</td>
+                    <td class="border px-2 py-1 text-red-400 bg-blue-900/30">109.46</td>
+                    <td class="border px-2 py-1 text-red-400 bg-blue-900/30">115.7</td>
+                    <td class="border px-2 py-1 text-red-400 bg-blue-900/30">109.42</td>
+                    <td class="border px-2 py-1 text-red-400 bg-blue-900/30">124.48</td>
+                    <td class="border px-2 py-1 text-green-400 bg-blue-900/30">111.72</td>
+                    <td class="border px-2 py-1 text-green-400 bg-blue-900/30">156.48</td>
+                    <td class="border px-2 py-1 text-red-400 bg-blue-900/30">129.36</td>
+                    <td class="border px-2 py-1 text-green-400 bg-blue-900/30">191.06</td>
+                </tr>
+                <tr>
+                    <td class="border px-2 py-1">TwiceMarked</td>
+                    <td class="border px-2 py-1 text-green-400 bg-blue-900/30">110.66</td>
+                    <td class="border px-2 py-1 text-red-400 bg-amber-800/30">139.62</td>
+                    <td class="border px-2 py-1 text-green-400 bg-amber-800/30">133.94</td>
+                    <td class="border px-2 py-1 text-green-400 bg-amber-800/30">168.36</td>
+                    <td class="border px-2 py-1 text-green-400 bg-amber-800/30">132.84</td>
+                    <td class="border px-2 py-1 text-red-400 bg-amber-800/30">118.36</td>
+                    <td class="border px-2 py-1 text-red-400 bg-amber-800/30">130.6</td>
+                    <td class="border px-2 py-1 text-green-400 bg-amber-800/30">158.78</td>
+                    <td class="border px-2 py-1 text-red-400 bg-amber-800/30">140.34</td>
+                    <td class="border px-2 py-1 text-red-400 bg-amber-800/30">137.44</td>
+                    <td class="border px-2 py-1 text-red-400 bg-amber-800/30">138.28</td>
+                    <td class="border px-2 py-1 text-red-400 bg-blue-900/30">108.96</td>
+                    <td class="border px-2 py-1 text-red-400 bg-amber-800/30">154.0</td>
+                    <td class="border px-2 py-1 text-green-400 bg-amber-800/30">198.08</td>
+                </tr>
+                <tr>
+                    <td class="border px-2 py-1">rynoceros17</td>
+                    <td class="border px-2 py-1 text-red-400 bg-amber-800/30">125.0</td>
+                    <td class="border px-2 py-1 text-green-400 bg-purple-800/30">151.98</td>
+                    <td class="border px-2 py-1 text-green-400 bg-purple-800/30">152.22</td>
+                    <td class="border px-2 py-1 text-red-400 bg-purple-800/30">111.94</td>
+                    <td class="border px-2 py-1 text-red-400 bg-purple-800/30">83.64</td>
+                    <td class="border px-2 py-1 text-red-400 bg-purple-800/30">101.74</td>
+                    <td class="border px-2 py-1 text-green-400 bg-purple-800/30">115.2</td>
+                    <td class="border px-2 py-1 text-green-400 bg-purple-800/30">177.8</td>
+                    <td class="border px-2 py-1 text-green-400 bg-purple-800/30">160.48</td>
+                    <td class="border px-2 py-1 text-green-400 bg-amber-800/30">144.3</td>
+                    <td class="border px-2 py-1 text-red-400 bg-blue-900/30">111.62</td>
+                    <td class="border px-2 py-1 text-red-400 bg-amber-800/30">128.84</td>
+                    <td class="border px-2 py-1 text-green-400 bg-purple-800/30">151.36</td>
+                    <td class="border px-2 py-1 text-green-400 bg-purple-800/30">131.4</td>
+                </tr>
+                <tr>
+                    <td class="border px-2 py-1">EmpiricalFool</td>
+                    <td class="border px-2 py-1 text-green-400 bg-purple-800/30">132.52</td>
+                    <td class="border px-2 py-1 text-green-400 bg-lime-800/30">117.5</td>
+                    <td class="border px-2 py-1 text-red-400 bg-lime-800/30">115.42</td>
+                    <td class="border px-2 py-1 text-green-400 bg-purple-800/30">165.28</td>
+                    <td class="border px-2 py-1 text-red-400 bg-lime-800/30">151.94</td>
+                    <td class="border px-2 py-1 text-green-400 bg-amber-800/30">132.18</td>
+                    <td class="border px-2 py-1 text-green-400 bg-blue-900/30">152.74</td>
+                    <td class="border px-2 py-1 text-green-400 bg-lime-800/30">154.4</td>
+                    <td class="border px-2 py-1 text-red-400 bg-lime-800/30">95.74</td>
+                    <td class="border px-2 py-1 text-red-400 bg-purple-800/30">80.12</td>
+                    <td class="border px-2 py-1 text-green-400 bg-purple-800/30">160.06</td>
+                    <td class="border px-2 py-1 text-red-400 bg-purple-800/30">148.14</td>
+                    <td class="border px-2 py-1 text-red-400 bg-lime-800/30">148.08</td>
+                    <td class="border px-2 py-1 text-red-400 bg-lime-800/30">136.4</td>
+                </tr>
+                <tr>
+                    <td class="border px-2 py-1">dontwearsandals</td>
+                    <td class="border px-2 py-1 text-green-400 bg-lime-800/30">97.26</td>
+                    <td class="border px-2 py-1 text-red-400 bg-rose-800/30">88.02</td>
+                    <td class="border px-2 py-1 text-red-400 bg-purple-800/30">86.76</td>
+                    <td class="border px-2 py-1 text-green-400 bg-blue-900/30">127.18</td>
+                    <td class="border px-2 py-1 text-red-400 bg-amber-800/30">110.28</td>
+                    <td class="border px-2 py-1 text-red-400 bg-lime-800/30">109.68</td>
+                    <td class="border px-2 py-1 text-red-400 bg-lime-800/30">97.94</td>
+                    <td class="border px-2 py-1 text-red-400 bg-rose-800/30">114.98</td>
+                    <td class="border px-2 py-1 text-green-400 bg-lime-800/30">103.78</td>
+                    <td class="border px-2 py-1 text-red-400 bg-lime-800/30">97.78</td>
+                    <td class="border px-2 py-1 text-red-400 bg-lime-800/30">113.98</td>
+                    <td class="border px-2 py-1 text-green-400 bg-lime-800/30">113.62</td>
+                    <td class="border px-2 py-1 text-red-400 bg-rose-800/30">126.3</td>
+                    <td class="border px-2 py-1 text-red-400 bg-purple-800/30">102.86</td>
+                </tr>
+                <tr>
+                    <td class="border px-2 py-1">xXTeamJacobXx</td>
+                    <td class="border px-2 py-1 text-red-400 bg-rose-800/30">138.1</td>
+                    <td class="border px-2 py-1 text-green-400 bg-blue-900/30">157.68</td>
+                    <td class="border px-2 py-1 text-red-400 bg-amber-800/30">115.74</td>
+                    <td class="border px-2 py-1 text-green-400 bg-lime-800/30">110.9</td>
+                    <td class="border px-2 py-1 text-green-400 bg-rose-800/30">138.54</td>
+                    <td class="border px-2 py-1 text-green-400 bg-lime-800/30">157.42</td>
+                    <td class="border px-2 py-1 text-green-400 bg-rose-800/30">132.32</td>
+                    <td class="border px-2 py-1 text-red-400 bg-cyan-800/30">163.76</td>
+                    <td class="border px-2 py-1 text-red-400 bg-purple-800/30">122.44</td>
+                    <td class="border px-2 py-1 text-green-400 bg-rose-800/30">138.04</td>
+                    <td class="border px-2 py-1 text-red-400 bg-purple-800/30">155.4</td>
+                    <td class="border px-2 py-1 text-red-400 bg-rose-800/30">102.6</td>
+                    <td class="border px-2 py-1 text-green-400 bg-blue-900/30">143.72</td>
+                    <td class="border px-2 py-1 text-red-400 bg-amber-800/30">127.66</td>
+                </tr>
+                <tr>
+                    <td class="border px-2 py-1">CeeLoGreen97</td>
+                    <td class="border px-2 py-1 text-green-400 bg-amber-800/30">207.32</td>
+                    <td class="border px-2 py-1 text-green-400 bg-rose-800/30">187.42</td>
+                    <td class="border px-2 py-1 text-green-400 bg-rose-800/30">132.3</td>
+                    <td class="border px-2 py-1 text-red-400 bg-rose-800/30">144.06</td>
+                    <td class="border px-2 py-1 text-green-400 bg-lime-800/30">190.38</td>
+                    <td class="border px-2 py-1 text-green-400 bg-rose-800/30">177.92</td>
+                    <td class="border px-2 py-1 text-green-400 bg-cyan-800/30">173.22</td>
+                    <td class="border px-2 py-1 text-green-400 bg-cyan-800/30">181.2</td>
+                    <td class="border px-2 py-1 text-green-400 bg-rose-800/30">194.18</td>
+                    <td class="border px-2 py-1 text-green-400 bg-blue-900/30">141.34</td>
+                    <td class="border px-2 py-1 text-green-400 bg-amber-800/30">159.3</td>
+                    <td class="border px-2 py-1 text-green-400 bg-amber-800/30">148.98</td>
+                    <td class="border px-2 py-1 text-green-400 bg-rose-800/30">154.88</td>
+                    <td class="border px-2 py-1 text-green-400 bg-rose-800/30">128.36</td>
+                </tr>
+                <tr>
+                    <td class="border px-2 py-1">RustySporxxx</td>
+                    <td class="border px-2 py-1 text-red-400 bg-lime-800/30">68.56</td>
+                    <td class="border px-2 py-1 text-red-400 bg-purple-800/30">101.14</td>
+                    <td class="border px-2 py-1 text-red-400 bg-rose-800/30">115.66</td>
+                    <td class="border px-2 py-1 text-red-400 bg-amber-800/30">132.76</td>
+                    <td class="border px-2 py-1 text-red-400 bg-blue-900/30">151.3</td>
+                    <td class="border px-2 py-1 text-green-400 bg-cyan-800/30">153.52</td>
+                    <td class="border px-2 py-1 text-red-400 bg-rose-800/30">88.86</td>
+                    <td class="border px-2 py-1 text-red-400 bg-lime-800/30">144.84</td>
+                    <td class="border px-2 py-1 text-red-400 bg-cyan-800/30">173.0</td>
+                    <td class="border px-2 py-1 text-red-400 bg-cyan-800/30">90.74</td>
+                    <td class="border px-2 py-1 text-red-400 bg-rose-800/30">87.76</td>
+                    <td class="border px-2 py-1 text-red-400 bg-lime-800/30">80.0</td>
+                    <td class="border px-2 py-1 text-red-400 bg-purple-800/30">77.4</td>
+                    <td class="border px-2 py-1 text-red-400 bg-rose-800/30">51.0</td>
+                </tr>
+                <tr>
+                    <td class="border px-2 py-1">PrincessofRaven</td>
+                    <td class="border px-2 py-1 text-red-400 bg-cyan-800/30">147.2</td>
+                    <td class="border px-2 py-1 text-green-400 bg-cyan-800/30">122.78</td>
+                    <td class="border px-2 py-1 text-green-400 bg-lime-800/30">134.12</td>
+                    <td class="border px-2 py-1 text-red-400 bg-lime-800/30">102.96</td>
+                    <td class="border px-2 py-1 text-green-400 bg-cyan-800/30">115.1</td>
+                    <td class="border px-2 py-1 text-red-400 bg-rose-800/30">93.16</td>
+                    <td class="border px-2 py-1 text-red-400 bg-purple-800/30">114.92</td>
+                    <td class="border px-2 py-1 text-green-400 bg-blue-900/30">175.46</td>
+                    <td class="border px-2 py-1 text-green-400 bg-amber-800/30">140.78</td>
+                    <td class="border px-2 py-1 text-green-400 bg-lime-800/30">145.04</td>
+                    <td class="border px-2 py-1 text-green-400 bg-rose-800/30">114.34</td>
+                    <td class="border px-2 py-1 text-red-400 bg-cyan-800/30">126.82</td>
+                    <td class="border px-2 py-1 text-green-400 bg-cyan-800/30">160.28</td>
+                    <td class="border px-2 py-1 text-green-400 bg-lime-800/30">142.0</td>
+                </tr>
+                <tr>
+                    <td class="border px-2 py-1">SgtWeenieArms</td>
+                    <td class="border px-2 py-1 text-green-400 bg-cyan-800/30">154.34</td>
+                    <td class="border px-2 py-1 text-red-400 bg-lime-800/30">101.26</td>
+                    <td class="border px-2 py-1 text-red-400 bg-cyan-800/30">141.12</td>
+                    <td class="border px-2 py-1 text-red-400 bg-cyan-800/30">147.76</td>
+                    <td class="border px-2 py-1 text-red-400 bg-rose-800/30">130.84</td>
+                    <td class="border px-2 py-1 text-green-400 bg-purple-800/30">138.68</td>
+                    <td class="border px-2 py-1 text-red-400 bg-cyan-800/30">128.68</td>
+                    <td class="border px-2 py-1 text-red-400 bg-amber-800/30">135.9</td>
+                    <td class="border px-2 py-1 text-green-400 bg-blue-900/30">167.68</td>
+                    <td class="border px-2 py-1 text-green-400 bg-cyan-800/30">127.96</td>
+                    <td class="border px-2 py-1 text-green-400 bg-lime-800/30">142.26</td>
+                    <td class="border px-2 py-1 text-green-400 bg-cyan-800/30">172.62</td>
+                    <td class="border px-2 py-1 text-green-400 bg-lime-800/30">159.7</td>
+                    <td class="border px-2 py-1 text-green-400 bg-cyan-800/30">198.9</td>
+                </tr>
+                <tr>
+                    <td class="border px-2 py-1">yoahiwa</td>
+                    <td class="border px-2 py-1 text-red-400 bg-purple-800/30">115.64</td>
+                    <td class="border px-2 py-1 text-red-400 bg-cyan-800/30">113.36</td>
+                    <td class="border px-2 py-1 text-green-400 bg-cyan-800/30">171.3</td>
+                    <td class="border px-2 py-1 text-green-400 bg-rose-800/30">172.92</td>
+                    <td class="border px-2 py-1 text-green-400 bg-purple-800/30">149.44</td>
+                    <td class="border px-2 py-1 text-red-400 bg-blue-900/30">136.42</td>
+                    <td class="border px-2 py-1 text-green-400 bg-amber-800/30">153.02</td>
+                    <td class="border px-2 py-1 text-green-400 bg-rose-800/30">153.02</td>
+                    <td class="border px-2 py-1 text-green-400 bg-cyan-800/30">200.72</td>
+                    <td class="border px-2 py-1 text-red-400 bg-rose-800/30">124.16</td>
+                    <td class="border px-2 py-1 text-green-400 bg-cyan-800/30">206.44</td>
+                    <td class="border px-2 py-1 text-green-400 bg-purple-800/30">172.02</td>
+                    <td class="border px-2 py-1 text-red-400 bg-cyan-800/30">134.22</td>
+                    <td class="border px-2 py-1 text-red-400 bg-cyan-800/30">197.58</td>
+                </tr>
+                <tr>
+                    <td class="border px-2 py-1">jazzyjackalope</td>
+                    <td class="border px-2 py-1 text-green-400 bg-rose-800/30">153.44</td>
+                    <td class="border px-2 py-1 text-green-400 bg-amber-800/30">160.58</td>
+                    <td class="border px-2 py-1 text-green-400 bg-blue-900/30">212.86</td>
+                    <td class="border px-2 py-1 text-green-400 bg-cyan-800/30">149.8</td>
+                    <td class="border px-2 py-1 text-red-400 bg-cyan-800/30">111.86</td>
+                    <td class="border px-2 py-1 text-red-400 bg-cyan-800/30">107.42</td>
+                    <td class="border px-2 py-1 text-green-400 bg-lime-800/30">128.94</td>
+                    <td class="border px-2 py-1 text-red-400 bg-purple-800/30">126.74</td>
+                    <td class="border px-2 py-1 text-red-400 bg-rose-800/30">132.14</td>
+                    <td class="border px-2 py-1 text-green-400 bg-purple-800/30">135.9</td>
+                    <td class="border px-2 py-1 text-red-400 bg-cyan-800/30">141.58</td>
+                    <td class="border px-2 py-1 text-green-400 bg-rose-800/30">119.42</td>
+                    <td class="border px-2 py-1 text-green-400 bg-amber-800/30">154.46</td>
+                    <td class="border px-2 py-1 text-red-400 bg-blue-900/30">130.42</td>
                 </tr>
             </tbody>
         </table>
