Improving some margins

--- a/web/index.html
+++ b/web/index.html
@@ -43,10 +43,10 @@
     </nav>
 
     <!-- MATCHUP_TABLES_START -->
-    <div class="w-screen px-4 -ml-4 md:-ml-24 lg:-ml-48 xl:-ml-64">
-        <section class="mt-16 overflow-x-auto px-2">
-            <h2 class="text-xl font-bold mt-16 mb-4">📊 Weekly Win/Loss Results</h2>
-            <table class="table-auto border-collapse text-sm">
+    <div class="w-screen px-4 -ml-4">
+        <section class="overflow-x-auto px-2">
+            <h2 class="text-xl font-bold mt-4 mb-4">📊 Weekly Win/Loss Results</h2>
+            <table class="table-auto border-collapse text-sm mb-16">
                 <thead>
                     <tr>
                         <th class="border px-2 py-1 text-left">Team</th>
@@ -273,8 +273,8 @@
                     </tr>
                 </tbody>
             </table>
-            <h2 class="text-xl font-bold mt-16 mb-4">📈 Weekly Points Scored</h2>
-            <table class="table-auto border-collapse text-sm">
+            <h2 class="text-xl font-bold mt-4 mb-4">📈 Weekly Points Scored</h2>
+            <table class="table-auto border-collapse text-sm mb-16">
                 <thead>
                     <tr>
                         <th class="border px-2 py-1 text-left">Team</th>
@@ -506,7 +506,7 @@
     <!-- MATCHUP_TABLES_END -->
 
     <section class="space-y-6">
-        <h2 class="text-2xl font-bold mt-12 mb-4">🏅 The Winner's Circle</h2>
+        <h2 class="text-2xl font-bold mt-4 mb-4">🏅 The Winner's Circle</h2>
         <div>
             <h3 class="text-xl font-semibold scroll-mt-28 md:scroll-mt-20" id="connor">🏆 - Connor - Team CeeLoGreen97 -
                 (13-1)</h3>
